--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
+    "force": "^0.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.1.3",
