--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
+    "redux-form": "^8.3.10",
+    "redux-forms": "^1.0.0-3",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
