--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "redux-form": "^8.3.10",
     "redux-forms": "^1.0.0-3",
     "redux-thunk": "^3.1.0",
+    "reselect": "^5.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
