--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-test-renderer": "^17.0.2",
     "redux": "^5.0.1",
     "redux-form": "^8.3.10",
     "redux-forms": "^1.0.0-3",
